--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                 </div>
                 
                 <!-- Project Poster -->
-                <img src="poster.png" 
+                <img src="src/poster.png" 
                      alt="Detection and Correction of Photosensitive Epilepsy Triggers in Videos - Project Poster" 
                      class="poster-image" 
                      onclick="openPosterModal()">
