--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,14 @@
                      class="poster-image" 
                      onclick="openPosterModal()">
                 
+                <!-- Poster Actions -->
+                <div class="poster-actions">
+                    <a href="src/poster.png" target="_blank" rel="noopener noreferrer" class="poster-link">
+                        <span class="poster-link-icon">🔗</span>
+                        <span>Open in New Tab</span>
+                    </a>
+                </div>
+                
                 <!-- Fallback if poster.png is not found -->
                 <div class="poster-placeholder" style="display: none;" id="posterFallback">
                     <div class="poster-icon">📋</div>
