--- a/index.html
+++ b/index.html
@@ -1301,6 +1301,7 @@
             <h2 class="section-title">Project Team</h2>
             <div class="authors-container fade-in">
                 <div class="authors-grid">
+                    <!-- İlk satır -->
                     <div class="author-card">
                         <div class="author-name">Berra Nur Öztürk</div>
                         <div class="author-role">Computer Engineering Student</div>
@@ -1311,6 +1312,7 @@
                         <div class="author-role">Computer Engineering Student</div>
                     </div>
                     
+                    <!-- İkinci satır -->
                     <div class="author-card">
                         <div class="author-name">Assoc. Prof. Dr. Aydın Kaya</div>
                         <div class="author-role">Project Advisor</div>
