--- a/index.html
+++ b/index.html
@@ -1443,6 +1443,12 @@
         </div>
     </section>
 
+    <!-- Poster Modal -->
+    <div id="posterModal" class="poster-modal" onclick="closePosterModal()">
+        <span class="poster-close">&times;</span>
+        <img class="poster-modal-content" id="modalPosterImage" alt="Project Poster - Full Resolution">
+    </div>
+
     <!-- Footer -->
     <footer>
         <div class="container">
