--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-original">Original (With Triggers)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/original/9.mp4" type="video/mp4">
+                                        <source src="videos/original/9.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1477,7 +1477,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-corrected">Corrected (Safe)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/corrected/9.mp4" type="video/mp4">
+                                        <source src="videos/corrected/9.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1491,7 +1491,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-original">Original (With Triggers)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/original/8.mp4" type="video/mp4">
+                                        <source src="videos/original/8.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1501,7 +1501,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-corrected">Corrected (Safe)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/corrected/8.mp4" type="video/mp4">
+                                        <source src="videos/corrected/8.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1515,7 +1515,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-original">Original (With Triggers)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/original/7.mp4" type="video/mp4">
+                                        <source src="videos/original/7.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1525,7 +1525,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-corrected">Corrected (Safe)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/corrected/7.mp4" type="video/mp4">
+                                        <source src="videos/corrected/7.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1539,7 +1539,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-original">Original (With Triggers)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/original/14.mp4" type="video/mp4">
+                                        <source src="videos/original/14.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1549,7 +1549,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-corrected">Corrected (Safe)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/corrected/14.mp4" type="video/mp4">
+                                        <source src="videos/corrected/14.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1563,7 +1563,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-original">Original (With Triggers)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/original/17.mp4" type="video/mp4">
+                                        <source src="videos/original/17.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
@@ -1573,7 +1573,7 @@
                                 <div class="video-item">
                                     <div class="video-label video-corrected">Corrected (Safe)</div>
                                     <video class="video-element" loop muted autoplay>
-                                        <source src="src/corrected/17.mp4" type="video/mp4">
+                                        <source src="videos/corrected/17.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="video-controls">
