--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@
                     <p>Upon detection of photosensitive triggers, our adaptive correction algorithm applies context-aware modifications to neutralize harmful patterns while preserving visual quality and content integrity.</p>
                 </div>
                 
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; margin-top: 40px;">
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 350px)); gap: 25px; margin-top: 40px; max-width: 800px; margin-left: auto; margin-right: auto; justify-content: center;">
                     <div class="stats-box" style="padding: 25px; border-radius: 10px; border: 2px solid rgba(100, 149, 237, 0.3);">
                         <h4 style="color: var(--accent-secondary); margin-bottom: 15px; font-size: 1.2rem;">🎭 Adaptive Overlay Correction</h4>
                         <ul style="list-style: none; padding: 0; margin: 0;">
