--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
                     <div class="pipeline-step">
                         <div class="step-number">4</div>
                         <h3 class="step-title">Trigger Classification</h3>
-                        <p><strong>Binary Decision:</strong> Sigmoid classifier with optimized threshold (0.7) balances sensitivity and specificity for reliable trigger detection.</p>
+                        <p><strong>Binary Decision:</strong> Sigmoid classifier with optimized threshold (0.5) balances sensitivity and specificity for reliable trigger detection.</p>
                         <p><strong>Confidence Scoring:</strong> Probability outputs enable fine-tuned decision making and uncertainty quantification.</p>
                     </div>
                     
@@ -1207,7 +1207,6 @@
                         <div class="step-number">6</div>
                         <h3 class="step-title">Quality Validation</h3>
                         <p><strong>PEAT Verification:</strong> Automated validation using Photosensitive Epilepsy Analysis Tool ensures corrected content meets safety standards.</p>
-                        <p><strong>Quality Metrics:</strong> SSIM and PSNR evaluation maintains acceptable visual fidelity (>0.85 SSIM threshold).</p>
                     </div>
                 </div>
             </div>
@@ -1283,7 +1282,7 @@
                     <p><strong>CNN Backbone:</strong> EfficientNet-B0 (ImageNet pretrained) extracts 1280-dimensional spatial features per frame</p>
                     <p><strong>Feature Projection:</strong> Linear layer (1280→1024) with ReLU activation projects features for transformer compatibility</p>
                     <p><strong>Positional Encoding:</strong> Learnable 1024-dimensional embeddings provide temporal frame order information</p>
-                    <p><strong>Dropout Regularization:</strong> 0.1 dropout rate applied after projection to prevent overfitting</p>
+                    <p><strong>Dropout Regularization:</strong> 0.3 dropout rate applied after projection to prevent overfitting</p>
                 </div>
 
                 <div class="arch-highlight">
@@ -1298,16 +1297,15 @@
                     <h3 style="color: rgb(126, 87, 194); margin-bottom: 15px;">🎯 Classification Head</h3>
                     <p><strong>Architecture:</strong> Two-layer MLP (1024→512→1) with ReLU activation and dropout (0.3)</p>
                     <p><strong>Output:</strong> Single sigmoid neuron for binary trigger classification (safe vs. dangerous)</p>
-                    <p><strong>Loss Function:</strong> Binary cross-entropy with class weights (1:3) to handle class imbalance</p>
-                    <p><strong>Decision Threshold:</strong> Optimized threshold (τ=0.7) balances precision and recall for safety-critical application</p>
+                    <p><strong>Loss Function:</strong> Binary cross-entropy</p>
+                    <p><strong>Decision Threshold:</strong> Optimized threshold (τ=0.5) balances precision and recall for safety-critical application</p>
                 </div>
 
                 <div class="arch-highlight">
                     <h3 style="color: rgb(126, 87, 194); margin-bottom: 15px;">⚙️ Training Configuration</h3>
-                    <p><strong>Optimizer:</strong> AdamW with learning rate 1e-4, weight decay 1e-2, and cosine annealing schedule</p>
-                    <p><strong>Data Augmentation:</strong> Random horizontal flip, color jitter (brightness±0.2, contrast±0.2), and temporal jittering</p>
+                    <p><strong>Optimizer:</strong> AdamW with learning rate 3e-5, weight decay 1e-4, and reducing learning rate by plateau</p>
+                    <p><strong>Data Augmentation:</strong> Random sequence reverse by 50% of change</p>
                     <p><strong>Batch Size:</strong> 16 sequences per batch (480 total frames) with gradient accumulation for effective batch size of 64</p>
-                    <p><strong>Validation:</strong> Early stopping based on F1-score with patience of 10 epochs</p>
                 </div>
             </div>
         </div>
