--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,10 @@
                         <div class="youtube-icon">📺</div>
                         <div>
                             <strong>YouTube Demo Video</strong><br>
-                            <span style="font-size: 1rem; opacity: 0.8;">Replace this with your YouTube embed code</span>
+                            <span style="font-size: 1rem; opacity: 0.8;">
+                                <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/sdJll3af_g8">
+                                </iframe></span>
                         </div>
                     </div>
                     
